invoice module fix 2